app working well. able to edit, delete, create a new article and so on

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -13,3 +13,16 @@
  *= require_tree .
  *= require_self
  */
+@import "bootstrap-sprockets";
+@import "bootstrap";
+
+.navbar {
+  margin-bottom: 0 !important;
+}
+.navbar-inverse {
+  border: none !important;
+}
+a {
+  text-decoration: none;
+  color: rgba(230,230,230,1);
+}
