--- a/app/views/articles/home.html.erb
+++ b/app/views/articles/home.html.erb
@@ -1,2 +1,11 @@
-<h1>Welcome to the Wikinimous</h1>
-<h4><%= link_to "Click here to see all posts", articles_path   %></h4>
+<div class="container-fluid home">
+  <div class="container">
+    <div class="row">
+      <div class="col-sm-6 col-sm-offset-3 text-center">
+        <h1>Welcome to the Wikinimous</h1>
+        <h4><%= link_to "Click here to see all posts", articles_path %></h4>
+      </div>
+    </div>
+  </div>
+</div>
+
