--- a/app/views/articles/new.html.erb
+++ b/app/views/articles/new.html.erb
@@ -1,1 +1,9 @@
-<%= render 'form' %>
+<div class="container-fluid">
+  <div class="container">
+    <div class="row">
+      <div class="col-sm-8 col-sm-offset-2 text-center">
+        <%= render 'form' %>
+      </div>
+    </div>
+  </div>
+</div>
